--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@
 body{
     height: 100vh;
     width: 100%;
-    margin-top: 15%;
+    margin-top: 10%;
 
 }
 
@@ -138,6 +138,12 @@ margin: 50px;
             list-style: none;
             text-decoration: none;
         }
+
+        body{
+    height: 100vh;
+    width: 100%;
+    margin-top: 20%;
+}
 }
 /*
 @media screen and (max-width: 768px) {
