--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,12 @@
     @include flexible(flex,space-between);
 }
 
+.header404 {
+    background-color: rgba(33, 34, 33, 0);
+    display: flex;
+    justify-content: space-between;
+}  
+
 /*.header{
     display: flex;
     justify-content: space-between;  
