--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -29,6 +29,12 @@ body {
   justify-content: space-between;
 }
 
+.header404 {
+  background-color: rgba(33, 34, 33, 0);
+  display: flex;
+  justify-content: space-between;
+}
+
 /*.header{
     display: flex;
     justify-content: space-between;  
@@ -47,14 +53,20 @@ body {
   color: whitesmoke;
   grid-area: main;
   text-align: center;
+  margin-bottom: 10vh;
 }
 
 .mainContacto {
   /*background-color: rgb(196, 34, 34);*/
   font-size: 20px;
   color: whitesmoke;
-  grid-area: main;
-  height: 100vh;
+  text-align: center;
+  margin-bottom: 10vh;
+}
+
+.main404 {
+  margin-bottom: 10vh;
+  text-align: center;
 }
 
 .navegacion {
