--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,11 +3,13 @@
     list-style: none;
     margin: 0px;
     display: flex;
+    text-align: center;
     .linkNav2{
         @extend .linkNav;
         color: map-get($estilos, colorLetra);
         text-decoration: none;
         font-size: 20px;
         margin: 10px;
+        text-align: center;
     }
 }
