--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3,6 +3,7 @@
     font-size: 20px;
     color: map-get($estilos, colorLetra);
     text-align: center;
+    margin-bottom: 10vh;
 }
 
 .mainGaleria{
