--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,6 +90,7 @@ margin: 50px;
     line-height: 40px;
     list-style: none;
     text-decoration: none;
+}
 
 .main{
         /*background-color: rgb(196, 34, 34);*/
@@ -146,6 +147,19 @@ margin: 50px;
     width: 100%;
     margin-top: 20%;
 }
+.underline::after{
+    content: "";
+    height: 5px;
+    width: 0;
+    background-color: whitesmoke;
+    display: inline-flex;
+    transition:  all 300ms;
+    }
+  
+    .underline:hover:after{
+      width: 100%;
+    }
+
 }
 /*
 @media screen and (max-width: 768px) {
@@ -172,7 +186,7 @@ margin: 50px;
     height: 4px;
     width: 0;
     background-color: red;
-    display: block;
+    display: inline;
     transition:  all 300ms;
     }
   
